# DS592

./: .gitignore  README.md  pyproject.toml
hw1/: programming_assignment.py
hw3/: .gitignore  README.md  epsilon_greedy_c_experiment.py  main.py  pyproject.toml
hw3/src/bandit_sim/: __init__.py
hw3/src/bandit_sim/algorithms/: __init__.py  base.py  epsilon_greedy.py  explore_then_commit.py  successive_elimination.py
hw3/src/bandit_sim/bandits/: n_armed_guassian_bandit.py
hw4/: README.md  part1.py  part2.py
hw5/: README.md  part_2f.py  part_a.py  part_b.py  part_c.py  part_e.py
hw6/: README.md  part1.py  part2.py
src/bandit_sim/algorithms/: __init__.py  base.py  exp3.py  oful.py  thompson_sampling.py  upper_confidence_bound.py
src/bandit_sim/bandits/: __init__.py  base.py  bernoulli_bandit.py  gaussian_bandit.py  linear_subgaussian_bandit.py
