[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bandit-sim"
version = "0.1.0"
description = "Bandit algorithms and environments."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26",
]
authors = [
  { name = "Anushkini" }
]

[project.optional-dependencies]
dev = [
  "ruff>=0.11",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["I", "RUF022"]
