[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bandit-sim"
version = "0.1.0"
description = "Bandit algorithm simulations and regret experiments for Gaussian bandits."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "matplotlib>=3.8",
  "numpy>=1.26",
]
authors = [
  { name = "Anushkini" }
]

[project.optional-dependencies]
dev = [
  "ruff>=0.11",
]

[project.scripts]
bandit-sim = "main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120
